Rename gke-info-go to istio-test
