# openapi.yaml
@@ -1,9 +1,9 @@
 openapi: 3.1.0
 
 info:
-  title: GKE Info Go
-  description: Provides information about the Google Kubernetes Engine (GKE) cluster.
-  version: v0.2.1
+  title: Istio Test
+  description: An example Istio test application that shows metadata about the Google Kubernetes Engine (GKE) cluster.
+  version: v0.3.0
 
 servers:
   - url: https://sb.gcp.osinfra.io
@@ -14,7 +14,7 @@ servers:
     description: Production
 
 paths:
-  /gke-info-go/health:
+  /istio-test/health:
     get:
       tags: []
       summary: Health Check
@@ -28,7 +28,7 @@ paths:
                 type: string
                 example: OK
 
-  /gke-info-go/metadata/{}:
+  /istio-test/metadata/{}:
     get:
       tags: []
       summary: Fetch Metadata
